[package]
name = "musicland"
version = "1.0.2"
authors = ["Greg Cooper <gregory.cooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clemenlib = { path = "../clemenlib" }
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.1"
ssh2 = "0.8.2"
serde_json = "1.0"
